New function Restore-BcDatabaseFromArtifacts for restoring databases from artifacts on an external sql server
New function Remove-BcDatabase for removing databases from an external sql server
New parameters -databasePrefix and -replaceExternalDatabases to New-BcContainer to allow New-BcContainer to create/replace databases on external SQL Server

1.0.12
Issue #1401 set app version if appBuild -or appRevision is specified
Add function description for Publish-PerTenantExtensionApps and Publish-BuildOutputToStorage
Support SecureString or String for secrets in Publish-PerTenantExtensionApps and Publish-BuildOutputToStorage
Fix issue where http://aka.ms/getbc cannot find prerequisites

1.0.11
Add function Set-BcContainerKeyVaultAadAppAndCertificate to set keyvault AAD App and certificate in container
Add parameter IncludeEmailAadApp to Create-AadAppsForBC to allow the function to create an Aad App for the new Email feature in 17.1
Run-AlPipeline support traefik containers in updatelaunchjson
Add preview function Publish-PerTenantExtensionApps to publish Per Tenant Extension Apps to an online tenant
Add preview function Publish-BuildOutputToStorage to publish build output to a storage account

1.0.10
Issue #1369 wrong validateset on tenant
Issue #1371 missing quotes on volume parameter
Check all countries when determining artifacts to use
Issue #1380 Import-TestToolkitToBcContainer fails when license warning occurs
Issue 1377 Sort-AppFoldersByDependencies didn't support empty arrays
Allow AppFiles to be an empty array in Sort-AppFilesByDependencies
Allow previousApps to be present locally (not downloaded from http or https)
Set default containername in New-BcContainerWizard to bcserver
Added function Run-ConnectionTestToBcContainer to test that a simple connection to the container is possible
Update hardcoded image version list
Update Windows Versions in New-BcImage
Issue #1392 New-BcContainerWizard closes if font size is too big